# protocolista

./: .black  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .yamllint  Makefile  README.md  TESTING_GUIDE.md  clean_audio.py  convert.py  coverage.xml  diarize.py  main.py  package-lock.json  pipeline.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  summarize.py  telegram_bot.py  test_bot.py  transcribe.py
protocolista/: __init__.py  audio.py  bot.py  commands.py  config.py  handlers.py  logging.py  utils.py
tests/: __init__.py  test_commands.py  test_transcription.py  test_utils.py
